--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "fzaninotto/faker": "^1.9",
+        "symfony/maker-bundle": "^1.23",
         "symfony/var-dumper": "5.1.*"
     },
     "config": {
